# rust_react_dictionary

./: .gitignore  README.md
backend/: .env  Cargo.toml
backend/migrations/2023-07-30-091144_create_word_pairs/: down.sql  up.sql
backend/src/: main.rs
backend/src/db/: models.rs  schema.rs
frontend/: app.tsx  package.json
frontend/www/: index.html
