[package]
name = "vt_backend"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.1.0", features = ["sqlite"] }
dotenvy = "0.15"

serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"
uuid = {version="1.4.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]}
tower = {version="0.4.13",features = ["full"]}
tower-http = {version = "0.4.3", features = ["full"]}
